feat: add get object with id and key, add get valueHash by keyHash
